Solve the issue where the page overflow horizontally

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -15,7 +15,6 @@
 }
 
 body {
-  min-width: 100vw;
   margin: 0;
   color: rgba(0, 0, 0, 0.65);
   font-size: 14px;
